--- a/index.htm
+++ b/index.htm
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="stylesIndex.css">
 </head>
 <body>
-    <header id="TopHeader"><h1>Wells Wait</h1><h2>Digital Protfolio ???</h2></header>
+    <header id="TopHeader"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></header>
     <section id="TopicList">
         <ul>
-            <li><a href="Programing/programing.htm">
+            <!-- <li><a href="Programing/programing.htm">
                 <h1>Programing</h1>
-            </a></li>
-            <li><a href="">
+            </a></li> -->
+            <li><a href="Robotics/robotics.htm">
                 <h1>Robotics</h1>
             </a></li>
-            <li><a href="">
+            <!-- <li><a href="">
                 <h1>Other</h1>
-            </a></li>
+            </a></li> -->
         </ul>
     </section>
     
