--- a/Programing/programing.htm
+++ b/Programing/programing.htm
@@ -10,14 +10,22 @@
     <header id="TopHeader"><a href="../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio Programing ???</h2></a></header>
     <section>
         <ul>
-            <li><a href=""><section id="ImageEncoding"><h1>Image Encoding</h1><h6>Date uploaded JUN 21 2024</h6><p>Paswords storage through the use of images for securiy when saving paswords online for easy acces.</p></section></a></li>
+            <li><a href=""><section id="ImageEncoding">
+                    <div><h1>Image Encoding</h1>
+                    <h6>Date uploaded JUN 21 2024</h6>
+                    <p>Paswords storage through the use of images for securiy when saving paswords online for easy acces.</p></div>
+                    <img src="../Assets/robot-1658023_1280.jpg" alt="Image Robot">
+            </section></a></li>
+            <li><a href=""><section id="ImageEncoding">
+                <div><h1>????</h1>
+                <h6>Date uploaded ????</h6>
+                <p>????????????????????????????????????</p></div>
+                <img src="../Assets/robot-1658023_1280.jpg" alt="Image Robot">
+        </section></a></li>
+
         </ul>
     </section>
-    <section>
-        <ul>
-            <li><a href=""><section id="??"><h1>???</h1><p>?????????????????????????????????????????</p></section></a></li>
-        </ul>
-    </section>
+ 
     
 </body>
 </html>
