--- a/ProjectList/Current/Current.htm
+++ b/ProjectList/Current/Current.htm
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robotics</title>
-    <link rel="stylesheet" href="stylesRobotics.css">
+    <title>Current</title>
+    <link rel="stylesheet" href="Current.css">
 </head>
 <body>
-    <header id="TopHeader"><a href="../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio Robotics</h2></a></header>
+    <header id="TopHeader"><a href="../../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></a></header>
     <section>
         <ul>
             <li><a href="Drone/Drone.htm"><section id="ImageEncoding">
