--- a/ProjectList/D2024/D2024.htm
+++ b/ProjectList/D2024/D2024.htm
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programing</title>
-    <link rel="stylesheet" href="stylesPrograming.css">
+    <link rel="stylesheet" href="D2024.css">
 </head>
 <body>
-    <header id="TopHeader"><a href="../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio Programing ???</h2></a></header>
+    <header id="TopHeader"><a href="../../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></a></header>
     <section>
         <ul>
             <li><a href=""><section id="ImageEncoding">
