--- a/index.htm
+++ b/index.htm
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="stylesIndex.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header id="TopHeader"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></header>
-    <section id="TopicList">
+    <header id="TopHeader"><a href="index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></a></header>
+
+    <header id="navbar">
         <ul>
-            <!-- <li><a href="Programing/programing.htm">
-                <h1>Programing</h1>
-            </a></li> -->
-            <li><a href="Robotics/robotics.htm">
-                <h1>Robotics</h1>
-            </a></li>
-            <!-- <li><a href="">
-                <h1>Other</h1>
-            </a></li> -->
+            <li id="About"><a href="index.htm">About Me</a></li>
+            <li id="NN"><a href="Neural_Network/NN.htm">Nerual Network</a></li>
+            <li id="NASA"><a href="NASA_SL/NASA_SL.htm">NASA SL</a></li>
+            <li id="Project"><a href="ProjectList/ProjectList.htm">Project list</a></li>
         </ul>
+    </header>
+
+
+
+    <section>
+        <h1> Image to the right. text on left</h1>
     </section>
     
 </body>
