--- a/Neural_Network/NeuralNetwork.htm
+++ b/Neural_Network/NeuralNetwork.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NN</title>
-    <link rel="stylesheet" href="NN.css">
+    <link rel="stylesheet" href="NeuralNetwork.css">
 </head>
 <body>
     <header id="TopHeader"><a href="../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></a></header>
@@ -12,7 +12,7 @@
     <header id="navbar">
         <ul>
             <li id="About"><a href="../index.htm">About Me</a></li>
-            <li id="NN"><a href="NN.htm">Nerual Network</a></li>
+            <li id="NN"><a href="NeuralNetwork.htm">Nerual Network</a></li>
             <li id="NASA"><a href="../NASA_SL/NASA_SL.htm">NASA SL</a></li>
             <li id="Project"><a href="../ProjectList/ProjectList.htm">Project list</a></li>
         </ul>
