--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
     <header id="navbar">
         <ul>
             <li id="About"><a href="index.htm">About Me</a></li>
-            <li id="NN"><a href="Neural_Network/NN.htm">Nerual Network</a></li>
+            <li id="NN"><a href="Neural_Network/NeuralNetwork.htm">Nerual Network</a></li>
             <li id="NASA"><a href="NASA_SL/NASA_SL.htm">NASA SL</a></li>
             <li id="Project"><a href="ProjectList/ProjectList.htm">Project list</a></li>
         </ul>
