--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 
 
     <section>
-        <h1> Image to the right. text on left</h1>
+        <h1> Image to the right. text on left.</h1>
     </section>
     
     
