home page added

--- a/Neural_Network/NeuralNetwork.htm
+++ b/Neural_Network/NeuralNetwork.htm
@@ -17,6 +17,20 @@
             <li id="Project"><a href="../ProjectList/ProjectList.htm">Project list</a></li>
         </ul>
     </header>
+    <section>
+        <h1>
+            Neural Network
+        </h1>
+        <div>
+            <p>uyfgaujdhfjabjuy</p>
+            <object
+            data=
+"Assets/Wk8.pdf"
+>
+    </object>
+        </div>
+        
+    </section>
     
 </body>
 </html>
