--- a/ProjectList/D2024/D2024.htm
+++ b/ProjectList/D2024/D2024.htm
@@ -10,7 +10,7 @@
     <header id="TopHeader"><a href="../../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></a></header>
     <section>
         <ul>
-            <li><a href=""><section id="ImageEncoding">
+            <!-- <li><a href=""><section id="ImageEncoding">
                     <div><h1>Image Encoding</h1>
                     <h6>Date uploaded JUN 21 2024</h6>
                     <p>Paswords storage through the use of images for securiy when saving paswords online for easy acces.</p></div>
@@ -21,7 +21,7 @@
                 <h6>Date uploaded ????</h6>
                 <p>????????????????????????????????????</p></div>
                 <img src="../Assets/robot-1658023_1280.jpg" alt="Image Robot">
-        </section></a></li>
+        </section></a></li> -->
 
         </ul>
     </section>
