--- a/ProjectList/ProjectList.htm
+++ b/ProjectList/ProjectList.htm
@@ -15,8 +15,8 @@
     <section id="TopicList">
         <ul>
 
-            <li><a href="Current/Current.htm">
-                <h1>Current</h1>
+            <li><a href="D2025/D2025.htm">
+                <h1>2025</h1>
             </a></li>
             <li><a href="D2024/D2024.htm">
                 <h1>2024</h1>
