NN badicly done

--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
 </html>
 
 <!-- List of things needing doing
- 1. Thesis 
+ 1. Thesis-partial done 
  2. Nasa Student Launch 
  3. Drone
  4. robot shelfver
