Nasa SL started

--- a/NASA_SL/NASA_SL.htm
+++ b/NASA_SL/NASA_SL.htm
@@ -17,6 +17,45 @@
             <li id="Project"><a href="../ProjectList/ProjectList.htm">Project list</a></li>
         </ul>
     </header>
-    
+
+
+    <section class="sidebyside">
+        <header class="Title">Animas High School NASA Student Launch Journey</header>
+        <img class=" logoimg" src="Assets/NASA STUDENT LAUNCH.png" alt="Nasa Student Lauch Animas High School">
+    </section>
+    <section class="outerbox">
+        <header>Proposal</header>
+        <div class="sidebyside">
+            <p class="sidebysideobject">text</p>
+            <object class="sidebysideobject pdfText"
+            data=
+"Assets/Animas High School - 2025 - Proposal.pdf"
+>
+    </object>
+        </div>
+    </section>
+    <section class="outerbox">
+        <header>Preliminary Deisgn Review</header>
+        <div class="sidebyside">
+            <p class="sidebysideobject">text</p>
+            <object class="sidebysideobject pdfText"
+            data=
+"Assets/Animas High School - 2025 - PDR.pdf"
+>
+    </object>
+        </div>
+        <object class="pdfSlide"
+            data=
+"Assets/Animas High School - 2025 - PDR Presentation.pdf"
+>
+    </object>
+    </section>
+    <section class="outerbox">
+        <header>The end</header>
+        <div class="sidebyside">
+            <p class="sidebysideobject">text</p>
+            <p class="sidebysideobject">img?</p>
+        </div>
+    </section>
 </body>
 </html>
