almost done on main pages

--- a/NASA_SL/NASA_SL.htm
+++ b/NASA_SL/NASA_SL.htm
@@ -26,7 +26,19 @@
     <section class="outerbox">
         <header>Proposal</header>
         <div class="sidebyside">
-            <p class="sidebysideobject">text</p>
+            <div class="sidebysideobject"><p>The proposal was started during the summer before the senior year of highschool. With the help of Alex Larson & Liam Lacy
+                we finished our proposal in the first few weeks of school and submited it to NASA. The point of this proposal was to show we knew what we were doing
+                and had a resable plan of how to attain our goal. We proposed to launch a rocket with the ability to deploy a plane at high altidude that could conduct
+                fire scans.
+            </p>
+            <p>The prosses to get to the point of proposing this idea to NASA however was not simple. The first step was to reach the top 25 in 
+                <a href="https://rocketcontest.org/">The American Rocketry Challenge</a>. A nation wide compotion were teams build small rockets carring an egg
+            and launch them to specific altidudes. The closer you are to the directed altidude the better with top teams being off by less then a foot.
+        The Animas Rocketry team has maniged to make it to the nationals of this compotion the past two years whith the most recent compotion being ranked high enough to submit
+    our proposal to NASA.</p>
+    <p>This proposal was accepted and alowed us to start working towards a high powered plane deploying rocket.</p>
+</div>
+            
             <object class="sidebysideobject pdfText"
             data=
 "Assets/Animas High School - 2025 - Proposal.pdf"
@@ -37,7 +49,13 @@
     <section class="outerbox">
         <header>Preliminary Deisgn Review</header>
         <div class="sidebyside">
-            <p class="sidebysideobject">text</p>
+            <p class="sidebysideobject">The first report after our proposal was excepted was called the Preliminary Deisgn Review. 
+                This alowed us to show our more detailed design to NASA enginers to fix mager issues and alow us to get more view points.
+                Around this time we added some yunger classmates to our team to help handle the work as this is generly a college level compotion. This Preliminary design Review
+                consisted of a paper going over detial of our desing, the building prosses, and risks of all kinds. This was an eye opening experiance and realy helped us see
+                the care that is placed into designs when in cooperation with other teams. In addtion we had to give a presentation and have a discution with NASA enginers. 
+                We got a lot of feedback at this time and it helped allot with creating a safe rocket design.
+            </p>
             <object class="sidebysideobject pdfText"
             data=
 "Assets/Animas High School - 2025 - PDR.pdf"
@@ -53,8 +71,13 @@
     <section class="outerbox">
         <header>The end</header>
         <div class="sidebyside">
-            <p class="sidebysideobject">text</p>
-            <p class="sidebysideobject">img?</p>
+            <p class="sidebysideobject">In the end our team of three seniors and two underclassmates was not enough to keep up with the work.
+                While we were close our design for our supscale model was finished only four weeks before the launch deadline and aprently this is not enough
+                time for parts to arive. At this point we had to leave the compotion as we could not build our rocket without parts but we still learn a lot.
+                We created several prototypes of folding automimus planes desighed to be launched out of a rocket. We also learned that the disigh prosses
+                takes a lot of time when working with orgnizations as it foced us to look over every detal and ensure safty. While in the end we did not compete we did learn a lot.
+            </p>
+            <p class="sidebysideobject red">img?</p>
         </div>
     </section>
 </body>
