Nasa SL started

--- a/index.htm
+++ b/index.htm
@@ -23,7 +23,7 @@
     <section>
         <img src="Assets/IMG_9883.jpg" alt="Photo of me">
         <div id="text1">
-            <h1>Welcome to my digital Protfolio</h1>
+            <h1>Welcome to my Digital Protfolio</h1>
             <p>My name is Wells Wait and I love to solve chalenging problems. I am a programer that focuses on building softere that works with the world. In other words I do stuff with robots and other systems were an understanding of the world and code is nessisary.
                 I have a four years of programing experiance with three years working with AI two of whitch I conducted reseach at fort lewis college.
             </p>
@@ -49,7 +49,7 @@
 
 <!-- List of things needing doing
  1. Thesis-partial done 
- 2. Nasa Student Launch 
+ 2. Nasa Student Launch - partial done
  3. Drone
  4. robot shelfver
  5. battle bot
