--- a/ProjectList/ProjectList.htm
+++ b/ProjectList/ProjectList.htm
@@ -8,6 +8,15 @@
 </head>
 <body>
     <header id="TopHeader"><a href="../index.htm"><h1>Wells Wait</h1><h2>Digital Protfolio</h2></a></header>
+
+    <header id="navbar">
+        <ul>
+            <li id="About"><a href="index.htm">About Me</a></li>
+            <li id="NN"><a href="Neural_Network/NeuralNetwork.htm">Nerual Network</a></li>
+            <li id="NASA"><a href="NASA_SL/NASA_SL.htm">NASA SL</a></li>
+            <li id="Project"><a href="ProjectList.htm">Project list</a></li>
+        </ul>
+    </header>
     <section id="Overview">
         <h1>Complete list of Projects:</h1>
 
