i don't know nav fix?

--- a/ProjectList/ProjectList.htm
+++ b/ProjectList/ProjectList.htm
@@ -11,10 +11,10 @@
 
     <header id="navbar">
         <ul>
-            <li id="About"><a href="index.htm">About Me</a></li>
-            <li id="NN"><a href="Neural_Network/NeuralNetwork.htm">Nerual Network</a></li>
-            <li id="NASA"><a href="NASA_SL/NASA_SL.htm">NASA SL</a></li>
-            <li id="Project"><a href="ProjectList.htm">Project list</a></li>
+            <li id="About"><a href="../index.htm">About Me</a></li>
+            <li id="NN"><a href="../Neural_Network/NeuralNetwork.htm">Nerual Network</a></li>
+            <li id="NASA"><a href="../NASA_SL/NASA_SL.htm">NASA SL</a></li>
+            <li id="Project"><a href="../ProjectList.htm">Project list</a></li>
         </ul>
     </header>
     <section id="Overview">
