--- a/NASA_SL/NASA_SL.htm
+++ b/NASA_SL/NASA_SL.htm
@@ -70,15 +70,15 @@
     </section>
     <section class="outerbox">
         <header>The end</header>
-        <div class="sidebyside">
-            <p class="sidebysideobject">In the end our team of three seniors and two underclassmates was not enough to keep up with the work.
+        
+            <p>In the end our team of three seniors and two underclassmates was not enough to keep up with the work.
                 While we were close our design for our supscale model was finished only four weeks before the launch deadline and aprently this is not enough
                 time for parts to arive. At this point we had to leave the compotion as we could not build our rocket without parts but we still learn a lot.
                 We created several prototypes of folding automimus planes desighed to be launched out of a rocket. We also learned that the disigh prosses
                 takes a lot of time when working with orgnizations as it foced us to look over every detal and ensure safty. While in the end we did not compete we did learn a lot.
             </p>
-            <p class="sidebysideobject red">img?</p>
-        </div>
+
+
     </section>
 </body>
 </html>
