--- a/Neural_Network/NeuralNetwork.htm
+++ b/Neural_Network/NeuralNetwork.htm
@@ -18,6 +18,12 @@
         </ul>
     </header>
     <section>
+        <h1>Overview</h1>
+        <div class="outerbox"><p>
+            Artificial intelligence has been taking the world by storm over the last few years.
+             I have been personally working with it since 2022 in my sophomore year of high school, and I started research at Fort Lewis College in Edge Divece, applied AI in my junior year of high school. In the summer of 2025, I published my first paper and finished my high school thesis about experimental artificial intelligence, as seen below.
+             I am currently working on an extremely flexible spiking neural network designed to behave like humans, including emotion-based processing changes.
+        </p></div>
         <h1>
             Neural Network High School Research
         </h1>
