--- a/Neural_Network/NeuralNetwork.htm
+++ b/Neural_Network/NeuralNetwork.htm
@@ -24,6 +24,28 @@
              I have been personally working with it since 2022 in my sophomore year of high school, and I started research at Fort Lewis College in Edge Divece, applied AI in my junior year of high school. In the summer of 2025, I published my first paper and finished my high school thesis about experimental artificial intelligence, as seen below.
              I am currently working on an extremely flexible spiking neural network designed to behave like humans, including emotion-based processing changes.
         </p></div>
+        <!-- Emotion-Inspired Spiking Neural Network using Temporary Dynamic Routing of Pathways and Synaptic Strengths During Inference with Heterogeneous Outputs -->
+         <h1>Current Research</h1>
+         <div class="outerbox">
+            <h1>Emotion-Inspired Spiking Neural Network using Temporary Dynamic Routing of Pathways and Synaptic Strengths During Inference with Heterogeneous Outputs</h1>
+        <p>Yeah, that title is long and hard to read. It is a work in progress. The basic idea is that I am removing the layer structure on a spiking neural network.
+ This removal of structure allows for less direct and longer paths through limited nodes(neurons), allowing for more computation with fewer nodes.
+ While this is fascinating, the real goal behind this modification was to allow for pathways to change during inference. Changing values is easy, but the number of connections is more difficult, leading to the use of a spiking network, and to add variety to the connections, there is no predetermined path to an output. As such, changing connections is possible, just leaving how to implement the changes.
+ To accomplish this goal, nodes outside standard operation are added to act as 'emotion' triggers, which temporarily change the pathways. The training, of course, may be challenging.
+ More will be added about this project as things move forward.
+        </p>
+        <p>----------------------------------------</p>
+        <p>This research, while not directly connected to an institution, will hopefully lead to my second publication and more research in the future.</p>
+        </div>
+        <h1>Fort Lewis College Research</h1>
+         <div class="outerbox">
+
+        <p>
+            This section will be added too soon, but the short version is that I have done two years of research in AI at Fort Lewis College.
+ Specifically, I worked with edge devices and suriniking AI models to work on ESP-32 development boards.
+        </p>
+
+        </div>
         <h1>
             Neural Network High School Research
         </h1>
