--- a/index.htm
+++ b/index.htm
@@ -24,29 +24,38 @@
         <img src="Assets/IMG_9883.jpg" alt="Photo of me">
         <div id="text1">
             <h1>Welcome to my Digital Protfolio</h1>
-            <p>My name is Wells Wait and I love to solve chalenging problems. I am a programer that focuses on building softere that works with the world. In other words I do stuff with robots and other systems were an understanding of the world and code is nessisary.
-                I have a four years of programing experiance with three years working with AI two of whitch I conducted reseach at fort lewis college.
+            <p>My name is Wells Wait, and I love to work on challenging problems. I have worked through my fair share of team projects inside and outside of school, and value wide skillsets and perspectives. 
+                I am dyslexic, so while there will be some bad spelling in this portfolio, it should give you a good idea of my interests and skills.
             </p>
+            <p>---</p>
+   
+            <p>Of course, time is often limited, so a brief description of skills and interests is warranted.
+                 I have done a lot of work in designing solutions using a wide variety of tools, from CAD to programming.
+                  I am an avid supporter of education and mathematics, and while I am not much of a teacher, I will always try.
+                   My preference in the design process is software that works with a physical system, so generally robotics.
+                 In addition to these, I generally spend my free time doing research into AI, focusing on the development of new algorithms.</p>
         </div>
         
         
     </section>
     <section class="outerbox">
-        <h1 class="center">Soon to be added</h1>
+        <h1 class="center">Updates To Expect Soon</h1>
         <div class="sidebyside">
             <div class="sidebysideobject">
-            <h1>Currnetly in Progress</h1>
+            <h1>Currnetly in Progress or Recently Finished</h1>
                 <ul class="centerList">
+                    <li>Formula SAE</li>
+                    <li>Emotion-Inspired Spiking Neural Network using Temporary Dynamic Routing of Pathways and Synaptic Strengths During Inference with Heterogeneous Outputs</li>
                     <li>Reinforment learning with simple enviorment</li>
                     <li>Camper</li>
-                    <li>Drone Flight contraler</li>
-                    <li>Desinging story shelving automation system</li>
+                    <li><a href="ProjectList/D2025/Drone/Drone.htm">Drone Flight contraler</a></li>
+                    <li><a href="https://alexlarson090.wixsite.com/my-site-2">Desinging story shelving automation system</a></li>
                     <li>Cribage board</li>
-                    <li>Battle Bot</li>
+                    <li>Battle Bot - (for fun)</li>
                 </ul>
             </div>
             <div class="sidebysideobject">
-            <h1>Potential Projects</h1>
+            <h1>Potential Projects For Future</h1>
                 <ul class="centerList">
                     <li>Music Creation with Music Theory and Reinforment Learning</li>
                     <li>face recongnition based callender</li>
